src/parser/FilterParser.ts
// Generated from ./src/parser/Filter.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { FilterListener } from "./FilterListener";
import { FilterVisitor } from "./FilterVisitor";


export class FilterParser extends Parser {
	public static readonly WORD = 1;
	public static readonly AND = 2;
	public static readonly OR = 3;
	public static readonly NOT = 4;
	public static readonly EQ = 5;
	public static readonly GT = 6;
	public static readonly GTE = 7;
	public static readonly LT = 8;
	public static readonly LTE = 9;
	public static readonly LIKE = 10;
	public static readonly PARENTHESIS_OPEN = 11;
	public static readonly PARENTHESIS_CLOSE = 12;
	public static readonly COMMA = 13;
	public static readonly RANGE = 14;
	public static readonly RULE_parse = 0;
	public static readonly RULE_orExpr = 1;
	public static readonly RULE_andExpr = 2;
	public static readonly RULE_notExpr = 3;
	public static readonly RULE_fieldExpr = 4;
	public static readonly RULE_parensExpr = 5;
	public static readonly RULE_fieldSimpleEqExpr = 6;
	public static readonly RULE_fieldSimpleLikeExpr = 7;
	public static readonly RULE_fieldSimpleGtExpr = 8;
	public static readonly RULE_fieldSimpleGteExpr = 9;
	public static readonly RULE_fieldSimpleLtExpr = 10;
	public static readonly RULE_fieldSimpleLteExpr = 11;
	public static readonly RULE_fieldMultiEqExpr = 12;
	public static readonly RULE_fieldMultiLikeExpr = 13;
	public static readonly RULE_fieldRangeEqExpr = 14;
	public static readonly RULE_field = 15;
	public static readonly RULE_value = 16;
	public static readonly RULE_multiValue = 17;
	public static readonly RULE_rangeValue = 18;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parse", "orExpr", "andExpr", "notExpr", "fieldExpr", "parensExpr", "fieldSimpleEqExpr", 
		"fieldSimpleLikeExpr", "fieldSimpleGtExpr", "fieldSimpleGteExpr", "fieldSimpleLtExpr", 
		"fieldSimpleLteExpr", "fieldMultiEqExpr", "fieldMultiLikeExpr", "fieldRangeEqExpr", 
		"field", "value", "multiValue", "rangeValue",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'&'", "'|'", "'!'", "'='", "'>'", "'>='", "'<'", 
		"'<='", "'~'", "'('", "')'", "','", "'..'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "WORD", "AND", "OR", "NOT", "EQ", "GT", "GTE", "LT", "LTE", 
		"LIKE", "PARENTHESIS_OPEN", "PARENTHESIS_CLOSE", "COMMA", "RANGE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(FilterParser._LITERAL_NAMES, FilterParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return FilterParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Filter.g4"; }

	// @Override
	public get ruleNames(): string[] { return FilterParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return FilterParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(FilterParser._ATN, this);
	}
	// @RuleVersion(0)
	public parse(): ParseContext {
		let _localctx: ParseContext = new ParseContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, FilterParser.RULE_parse);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 38;
			this.orExpr();
			this.state = 39;
			this.match(FilterParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public orExpr(): OrExprContext {
		let _localctx: OrExprContext = new OrExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, FilterParser.RULE_orExpr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 41;
			this.andExpr();
			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FilterParser.OR) {
				{
				{
				this.state = 42;
				this.match(FilterParser.OR);
				this.state = 43;
				this.andExpr();
				}
				}
				this.state = 48;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public andExpr(): AndExprContext {
		let _localctx: AndExprContext = new AndExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, FilterParser.RULE_andExpr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.notExpr();
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FilterParser.AND) {
				{
				{
				this.state = 50;
				this.match(FilterParser.AND);
				this.state = 51;
				this.notExpr();
				}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public notExpr(): NotExprContext {
		let _localctx: NotExprContext = new NotExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, FilterParser.RULE_notExpr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FilterParser.NOT) {
				{
				{
				this.state = 57;
				this.match(FilterParser.NOT);
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this.fieldExpr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldExpr(): FieldExprContext {
		let _localctx: FieldExprContext = new FieldExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, FilterParser.RULE_fieldExpr);
		try {
			this.state = 75;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 65;
				this.parensExpr();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 66;
				this.fieldSimpleEqExpr();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 67;
				this.fieldSimpleLikeExpr();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 68;
				this.fieldSimpleGtExpr();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 69;
				this.fieldSimpleGteExpr();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 70;
				this.fieldSimpleLtExpr();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 71;
				this.fieldSimpleLteExpr();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 72;
				this.fieldMultiEqExpr();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 73;
				this.fieldMultiLikeExpr();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 74;
				this.fieldRangeEqExpr();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parensExpr(): ParensExprContext {
		let _localctx: ParensExprContext = new ParensExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, FilterParser.RULE_parensExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 77;
			this.match(FilterParser.PARENTHESIS_OPEN);
			this.state = 78;
			this.orExpr();
			this.state = 79;
			this.match(FilterParser.PARENTHESIS_CLOSE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldSimpleEqExpr(): FieldSimpleEqExprContext {
		let _localctx: FieldSimpleEqExprContext = new FieldSimpleEqExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, FilterParser.RULE_fieldSimpleEqExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this.field();
			this.state = 82;
			this.match(FilterParser.EQ);
			this.state = 83;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldSimpleLikeExpr(): FieldSimpleLikeExprContext {
		let _localctx: FieldSimpleLikeExprContext = new FieldSimpleLikeExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, FilterParser.RULE_fieldSimpleLikeExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.field();
			this.state = 86;
			this.match(FilterParser.LIKE);
			this.state = 87;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldSimpleGtExpr(): FieldSimpleGtExprContext {
		let _localctx: FieldSimpleGtExprContext = new FieldSimpleGtExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, FilterParser.RULE_fieldSimpleGtExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 89;
			this.field();
			this.state = 90;
			this.match(FilterParser.GT);
			this.state = 91;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldSimpleGteExpr(): FieldSimpleGteExprContext {
		let _localctx: FieldSimpleGteExprContext = new FieldSimpleGteExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, FilterParser.RULE_fieldSimpleGteExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.field();
			this.state = 94;
			this.match(FilterParser.GTE);
			this.state = 95;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldSimpleLtExpr(): FieldSimpleLtExprContext {
		let _localctx: FieldSimpleLtExprContext = new FieldSimpleLtExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, FilterParser.RULE_fieldSimpleLtExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.field();
			this.state = 98;
			this.match(FilterParser.LT);
			this.state = 99;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldSimpleLteExpr(): FieldSimpleLteExprContext {
		let _localctx: FieldSimpleLteExprContext = new FieldSimpleLteExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, FilterParser.RULE_fieldSimpleLteExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this.field();
			this.state = 102;
			this.match(FilterParser.LTE);
			this.state = 103;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldMultiEqExpr(): FieldMultiEqExprContext {
		let _localctx: FieldMultiEqExprContext = new FieldMultiEqExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, FilterParser.RULE_fieldMultiEqExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.field();
			this.state = 106;
			this.match(FilterParser.EQ);
			this.state = 107;
			this.multiValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldMultiLikeExpr(): FieldMultiLikeExprContext {
		let _localctx: FieldMultiLikeExprContext = new FieldMultiLikeExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, FilterParser.RULE_fieldMultiLikeExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.field();
			this.state = 110;
			this.match(FilterParser.LIKE);
			this.state = 111;
			this.multiValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldRangeEqExpr(): FieldRangeEqExprContext {
		let _localctx: FieldRangeEqExprContext = new FieldRangeEqExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, FilterParser.RULE_fieldRangeEqExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.field();
			this.state = 114;
			this.match(FilterParser.EQ);
			this.state = 115;
			this.rangeValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let _localctx: FieldContext = new FieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, FilterParser.RULE_field);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(FilterParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let _localctx: ValueContext = new ValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, FilterParser.RULE_value);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FilterParser.WORD) {
				{
				this.state = 119;
				this.match(FilterParser.WORD);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public multiValue(): MultiValueContext {
		let _localctx: MultiValueContext = new MultiValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, FilterParser.RULE_multiValue);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			this.value();
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FilterParser.COMMA) {
				{
				{
				this.state = 123;
				this.match(FilterParser.COMMA);
				this.state = 124;
				this.value();
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rangeValue(): RangeValueContext {
		let _localctx: RangeValueContext = new RangeValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, FilterParser.RULE_rangeValue);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.value();
			this.state = 131;
			this.match(FilterParser.RANGE);
			this.state = 132;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!FilterParser.__ATN) {
			FilterParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(FilterParser._serializedATN));
		}

		return FilterParser.__ATN;
	}

}

export class ParseContext extends ParserRuleContext {
	public orExpr(): OrExprContext {
		return this.getRuleContext(0, OrExprContext);
	}
	public EOF(): TerminalNode { return this.getToken(FilterParser.EOF, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_parse; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterParse) {
			listener.enterParse(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitParse) {
			listener.exitParse(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitParse) {
			return visitor.visitParse(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class OrExprContext extends ParserRuleContext {
	public andExpr(): AndExprContext[];
	public andExpr(i: number): AndExprContext;
	public andExpr(i?: number): AndExprContext | AndExprContext[] {
		if (i === undefined) {
			return this.getRuleContexts(AndExprContext);
		} else {
			return this.getRuleContext(i, AndExprContext);
		}
	}
	public OR(): TerminalNode[];
	public OR(i: number): TerminalNode;
	public OR(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(FilterParser.OR);
		} else {
			return this.getToken(FilterParser.OR, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_orExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterOrExpr) {
			listener.enterOrExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitOrExpr) {
			listener.exitOrExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitOrExpr) {
			return visitor.visitOrExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AndExprContext extends ParserRuleContext {
	public notExpr(): NotExprContext[];
	public notExpr(i: number): NotExprContext;
	public notExpr(i?: number): NotExprContext | NotExprContext[] {
		if (i === undefined) {
			return this.getRuleContexts(NotExprContext);
		} else {
			return this.getRuleContext(i, NotExprContext);
		}
	}
	public AND(): TerminalNode[];
	public AND(i: number): TerminalNode;
	public AND(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(FilterParser.AND);
		} else {
			return this.getToken(FilterParser.AND, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_andExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterAndExpr) {
			listener.enterAndExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitAndExpr) {
			listener.exitAndExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitAndExpr) {
			return visitor.visitAndExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class NotExprContext extends ParserRuleContext {
	public fieldExpr(): FieldExprContext {
		return this.getRuleContext(0, FieldExprContext);
	}
	public NOT(): TerminalNode[];
	public NOT(i: number): TerminalNode;
	public NOT(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(FilterParser.NOT);
		} else {
			return this.getToken(FilterParser.NOT, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_notExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterNotExpr) {
			listener.enterNotExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitNotExpr) {
			listener.exitNotExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitNotExpr) {
			return visitor.visitNotExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FieldExprContext extends ParserRuleContext {
	public parensExpr(): ParensExprContext | undefined {
		return this.tryGetRuleContext(0, ParensExprContext);
	}
	public fieldSimpleEqExpr(): FieldSimpleEqExprContext | undefined {
		return this.tryGetRuleContext(0, FieldSimpleEqExprContext);
	}
	public fieldSimpleLikeExpr(): FieldSimpleLikeExprContext | undefined {
		return this.tryGetRuleContext(0, FieldSimpleLikeExprContext);
	}
	public fieldSimpleGtExpr(): FieldSimpleGtExprContext | undefined {
		return this.tryGetRuleContext(0, FieldSimpleGtExprContext);
	}
	public fieldSimpleGteExpr(): FieldSimpleGteExprContext | undefined {
		return this.tryGetRuleContext(0, FieldSimpleGteExprContext);
	}
	public fieldSimpleLtExpr(): FieldSimpleLtExprContext | undefined {
		return this.tryGetRuleContext(0, FieldSimpleLtExprContext);
	}
	public fieldSimpleLteExpr(): FieldSimpleLteExprContext | undefined {
		return this.tryGetRuleContext(0, FieldSimpleLteExprContext);
	}
	public fieldMultiEqExpr(): FieldMultiEqExprContext | undefined {
		return this.tryGetRuleContext(0, FieldMultiEqExprContext);
	}
	public fieldMultiLikeExpr(): FieldMultiLikeExprContext | undefined {
		return this.tryGetRuleContext(0, FieldMultiLikeExprContext);
	}
	public fieldRangeEqExpr(): FieldRangeEqExprContext | undefined {
		return this.tryGetRuleContext(0, FieldRangeEqExprContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_fieldExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterFieldExpr) {
			listener.enterFieldExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitFieldExpr) {
			listener.exitFieldExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitFieldExpr) {
			return visitor.visitFieldExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ParensExprContext extends ParserRuleContext {
	public PARENTHESIS_OPEN(): TerminalNode { return this.getToken(FilterParser.PARENTHESIS_OPEN, 0); }
	public orExpr(): OrExprContext {
		return this.getRuleContext(0, OrExprContext);
	}
	public PARENTHESIS_CLOSE(): TerminalNode { return this.getToken(FilterParser.PARENTHESIS_CLOSE, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_parensExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterParensExpr) {
			listener.enterParensExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitParensExpr) {
			listener.exitParensExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitParensExpr) {
			return visitor.visitParensExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FieldSimpleEqExprContext extends ParserRuleContext {
	public field(): FieldContext {
		return this.getRuleContext(0, FieldContext);
	}
	public EQ(): TerminalNode { return this.getToken(FilterParser.EQ, 0); }
	public value(): ValueContext {
		return this.getRuleContext(0, ValueContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_fieldSimpleEqExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterFieldSimpleEqExpr) {
			listener.enterFieldSimpleEqExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitFieldSimpleEqExpr) {
			listener.exitFieldSimpleEqExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitFieldSimpleEqExpr) {
			return visitor.visitFieldSimpleEqExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FieldSimpleLikeExprContext extends ParserRuleContext {
	public field(): FieldContext {
		return this.getRuleContext(0, FieldContext);
	}
	public LIKE(): TerminalNode { return this.getToken(FilterParser.LIKE, 0); }
	public value(): ValueContext {
		return this.getRuleContext(0, ValueContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FilterParser.RULE_fieldSimpleLikeExpr; }
	// @Override
	public enterRule(listener: FilterListener): void {
		if (listener.enterFieldSimpleLikeExpr) {
			listener.enterFieldSimpleLikeExpr(this);
		}
	}
	// @Override
	public exitRule(listener: FilterListener): void {
		if (listener.exitFieldSimpleLikeExpr) {
			listener.exitFieldSimpleLikeExpr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FilterVisitor<Result>): Result {
		if (visitor.visitFieldSimpleLikeExpr) {
			return visitor.visitFieldSimpleLikeExpr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

